--- a/app/src/main/res/drawable/bg_rounded_button.xml
+++ b/app/src/main/res/drawable/bg_rounded_button.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     android:padding="10dp">
     <stroke
-        android:color="@color/colorPrimary"
+        android:color="@color/colorPrimaryDark"
         android:width="2dp"/>
     <solid android:color="@android:color/transparent"/>
     <corners android:radius="100dp"/>
