--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/tv_app_name"
+        android:text="shopr"
+        android:textSize="70sp"
+        android:gravity="center"
+        android:textAllCaps="false"
+        android:layout_marginTop="170dp"
+        android:textStyle="italic|bold"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/btn_google_sign_in"
         style="?attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_app_name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
         android:background="@drawable/bg_rounded_button"
         android:padding="20dp"
         android:text="@string/sign_in_with_google"
-        android:textColor="@color/colorPrimary"
-        android:textSize="20sp"
-        android:textStyle="italic" />
+        android:textColor="@color/colorWhite"
+        android:textSize="16sp" />
 
 
 
-</LinearLayout>
+</RelativeLayout>
