--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:gravity="center"
+    android:background="@color/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:text="Shopr"
-        android:textSize="80sp"
+        android:text="shopr"
+        android:textSize="70sp"
         android:gravity="center"
+        android:textAllCaps="false"
+        android:layout_marginTop="170dp"
+        android:textStyle="italic|bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
