--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fb="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
@@ -7,14 +8,14 @@
 
     <TextView
         android:id="@+id/tv_app_name"
-        android:text="shopr"
-        android:textSize="70sp"
-        android:gravity="center"
-        android:textAllCaps="false"
-        android:layout_marginTop="170dp"
-        android:textStyle="italic|bold"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="170dp"
+        android:gravity="center"
+        android:text="shopr"
+        android:textAllCaps="false"
+        android:textSize="70sp"
+        android:textStyle="italic|bold" />
 
     <Button
         android:id="@+id/btn_google_sign_in"
@@ -27,9 +28,18 @@
         android:background="@drawable/bg_rounded_button"
         android:padding="20dp"
         android:text="@string/sign_in_with_google"
+        android:textAllCaps="true"
         android:textColor="@color/colorWhite"
         android:textSize="16sp" />
 
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/btn_fb_sign_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_google_sign_in"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textSize="16sp" />
 
 
 </RelativeLayout>
