--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,8 +10,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.android.shopr.HomeActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/btn_create_qr"
+        android:text="Get QR Code"
+        android:textAllCaps="false"
+        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_height="wrap_content" />
+
+    <ImageView
+        android:id="@+id/iv_temp"
+        android:layout_below="@+id/btn_create_qr"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp" />
+
+    <Button
+        android:id="@+id/btn_scan"
+        android:layout_below="@+id/iv_temp"
+        android:text="Start Scanner"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
