--- a/app/src/main/res/layout/two_image_and_text.xml
+++ b/app/src/main/res/layout/two_image_and_text.xml
@@ -6,13 +6,13 @@
 
     <ImageView
         android:id="@+id/iv_image"
-        android:layout_width="180dp"
+        android:layout_width="match_parent"
         android:layout_height="180dp" />
 
     <TextView
         android:id="@+id/tv_text"
         android:gravity="center"
-        android:layout_width="180dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
