--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,14 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="192dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?attr/colorPrimaryDark"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:orientation="vertical"
     android:gravity="bottom">
 
-    <ImageView
+    <com.android.shopr.views.CircleImageView
         android:id="@+id/iv_user_image"
-        android:layout_width="match_parent"
+        android:layout_width="155dp"
+        app:civ_border_width="3dp"
+        android:layout_centerHorizontal="true"
+        app:civ_border_color="@color/colorAccent"
         android:layout_height="155dp" />
 
     <TextView
