--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,6 +33,24 @@
             android:layout_marginBottom="24dp"
             android:layout_width="48dp"
             android:layout_height="48dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="4dp"
+            android:background="@drawable/shadow"
+            android:layout_above="@+id/bottom_navigation"/>
+
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:itemBackground="@color/colorWhite"
+            app:itemIconTint="@color/colorBlack"
+            app:itemTextColor="@color/colorBlack"
+            android:layout_alignParentBottom="true"
+            android:elevation="8dp"
+            app:elevation="8dp"
+            app:menu="@menu/bottom_navigation_main"/>
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
