--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,10 +27,11 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:src="@drawable/ic_drawer"
-            android:layout_alignParentBottom="true"
+            android:layout_above="@+id/bottom_navigation"
             android:layout_alignParentRight="true"
             android:layout_marginRight="24dp"
             android:layout_marginBottom="24dp"
+            app:elevation="10dp"
             android:layout_width="48dp"
             android:layout_height="48dp" />
 
@@ -47,9 +48,8 @@
             app:itemBackground="@color/colorWhite"
             app:itemIconTint="@color/colorBlack"
             app:itemTextColor="@color/colorBlack"
+            app:elevation="10dp"
             android:layout_alignParentBottom="true"
-            android:elevation="8dp"
-            app:elevation="8dp"
             app:menu="@menu/bottom_navigation_main"/>
     </RelativeLayout>
 
