AppBg color added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorBlack">#000000</color>
     <color name="colorShadow">#1F000000</color>
     <color name="colorRed">#FF0000</color>
+    <color name="colorAppBg">#F5FBEF</color>
 </resources>
