--- a/app/src/main/res/layout/two_image_and_text.xml
+++ b/app/src/main/res/layout/two_image_and_text.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="10dp"
+    android:layout_margin="5dp"
     app:cardCornerRadius="7dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -15,9 +13,13 @@
             android:layout_width="match_parent"
             android:layout_height="180dp" />
 
-        <TextView
+        <com.android.shopr.ShoprTextView
             android:id="@+id/tv_text"
             android:layout_below="@+id/iv_image"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:textSize="16sp"
+            app:fontFile="Roboto-MediumItalic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center" />
