--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorWhite"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/img_product"
+        android:id="@+id/iv_product_image"
         android:layout_width="match_parent"
         android:layout_height="450dp" />
 
@@ -13,7 +14,7 @@
         android:id="@+id/tv_product_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/img_product"
+        android:layout_below="@+id/iv_product_image"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="10dp"
         android:text="Henley Brown Jacket"
