--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -9,7 +9,7 @@
         android:text="shopr"
         android:textSize="70sp"
         android:gravity="center"
-        android:textAllCaps="false"
+        android:textAllCaps="true"
         android:layout_marginTop="170dp"
         android:textStyle="italic|bold"
         android:layout_width="match_parent"
