--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00BCD4</color>
-    <color name="colorPrimaryDark">#0097A7</color>
-    <color name="colorAccent">#00BCD4</color>
+    <color name="colorPrimary">#24C6DC</color>
+    <color name="colorPrimaryDark">#007E8E</color>
+    <color name="colorAccent">#0B4A52</color>
     <color name="colorWhite">#FFFFFF</color>
-    <color name="colorBlack">#000000</color>
+    <color name="colorBlack">#161616</color>
     <color name="colorShadow">#1F000000</color>
-    <color name="colorRed">#FF0000</color>
+    <color name="colorRed">#FF0E36</color>
     <color name="colorAppBg">#F5FBEF</color>
+    <color name="colorDarkGrey">#26272C</color>
 </resources>
