--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
 
-    <com.android.shopr.views.ShoprTextView
-        android:id="@+id/tv_app_name"
-        android:text="shopr"
-        android:textSize="70sp"
-        android:gravity="center"
-        android:textAllCaps="true"
-        android:layout_marginTop="170dp"
-        app:fontFile="Roboto-BoldItalic.ttf"
+    <ImageView
+        android:src="@mipmap/bg_splash"
+        android:scaleType="centerCrop"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
+    <!--<com.android.shopr.views.ShoprTextView-->
+        <!--android:id="@+id/tv_app_name"-->
+        <!--android:text="shopr"-->
+        <!--android:textSize="70sp"-->
+        <!--android:gravity="center"-->
+        <!--android:textAllCaps="true"-->
+        <!--android:layout_marginTop="170dp"-->
+        <!--app:fontFile="Roboto-BoldItalic.ttf"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
+
+    <ImageView
+        android:id="@+id/logo"
+        android:src="@drawable/bg_logo"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="150dp" />
 
     <Button
         android:id="@+id/btn_google_sign_in"
-        style="?attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_app_name"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/bg_rounded_button"
-        android:padding="20dp"
-        android:text="@string/sign_in_with_google"
-        android:textAllCaps="true"
-        android:textColor="@color/colorWhite"
-        android:textSize="16sp" />
+        android:layout_marginBottom="90dp"
+        android:layout_marginLeft="150dp"
+        android:background="@drawable/bg_google_login" />
 
 
 </RelativeLayout>
