--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -46,10 +46,9 @@
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:itemBackground="@color/colorWhite"
-            app:itemIconTint="@color/colorBlack"
-            app:itemTextColor="@color/colorBlack"
+            app:itemBackground="@color/colorBlack"
             app:elevation="10dp"
+            android:theme="@style/BottomNavTheme"
             android:layout_alignParentBottom="true"
             app:menu="@menu/bottom_navigation_main"/>
     </RelativeLayout>
