--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -2,28 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_self_checkout"
+        android:id="@+id/action_quick_checkout"
         android:enabled="true"
-        android:icon="@drawable/ic_self_checkout"
-        android:title="@string/text_self_checkout"
+        android:icon="@drawable/ic_quickcheckout_normal"
+        android:title="@string/text_quick_checkout"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_store"
         android:enabled="true"
-        android:icon="@drawable/ic_store"
-        android:title="@string/text_store"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/action_sale"
-        android:enabled="true"
-        android:icon="@drawable/ic_sale"
-        android:title="@string/text_sale"
+        android:icon="@drawable/ic_stores_normal"
+        android:title="@string/text_shops"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/action_watching"
+        android:id="@+id/action_sales"
         android:enabled="true"
-        android:icon="@drawable/ic_watching"
-        android:title="@string/text_watching"
+        android:icon="@drawable/ic_sales_normal"
+        android:title="@string/text_sale"
         app:showAsAction="always" />
 </menu>
