--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,7 +27,8 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
-            android:src="@drawable/ic_drawer"
+            android:scaleType="center"
+            android:src="@drawable/ic_barcode"
             android:layout_above="@+id/bottom_navigation"
             android:layout_alignParentRight="true"
             android:layout_marginRight="24dp"
