--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,12 +18,21 @@
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize" />
 
-        <FrameLayout
-            android:id="@+id/frame_container"
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_marginTop="1dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_navigation"
-            android:layout_below="@+id/toolbar" />
+            android:layout_below="@+id/toolbar" >
+            <include
+                android:id="@+id/tl_tab"
+                layout="@layout/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/toolbar"
+                />
+        </android.support.v4.view.ViewPager>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
