--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -1,4 +1,4 @@
 <vector android:height="24dp" android:viewportHeight="60.0"
     android:viewportWidth="60.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M59.5,56.9L44.9,42.4c3.9,-4.5 6.3,-10.4 6.3,-16.8C51.2,11.5 39.7,0 25.6,0C11.5,0 0,11.5 0,25.6s11.5,25.6 25.6,25.6c6.4,0 12.3,-2.4 16.8,-6.3l14.6,14.6c0.3,0.3 0.8,0.5 1.3,0.5c0.5,0 0.9,-0.2 1.3,-0.5C60.2,58.8 60.2,57.6 59.5,56.9zM3.6,25.6c0,-12.1 9.9,-22 22,-22s22,9.9 22,22s-9.9,22 -22,22C13.5,47.6 3.6,37.7 3.6,25.6z"/>
+    <path android:fillColor="@color/colorWhite" android:pathData="M59.5,56.9L44.9,42.4c3.9,-4.5 6.3,-10.4 6.3,-16.8C51.2,11.5 39.7,0 25.6,0C11.5,0 0,11.5 0,25.6s11.5,25.6 25.6,25.6c6.4,0 12.3,-2.4 16.8,-6.3l14.6,14.6c0.3,0.3 0.8,0.5 1.3,0.5c0.5,0 0.9,-0.2 1.3,-0.5C60.2,58.8 60.2,57.6 59.5,56.9zM3.6,25.6c0,-12.1 9.9,-22 22,-22s22,9.9 22,22s-9.9,22 -22,22C13.5,47.6 3.6,37.7 3.6,25.6z"/>
 </vector>
