--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -1,13 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimary"
-    android:titleTextColor="#ffffff"
     android:layout_width="match_parent"
-    android:fitsSystemWindows="true"
     android:layout_height="?android:attr/actionBarSize"
-    app:theme="@style/ThemeOverlay.AppCompat.Dark"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    android:background="@color/colorPrimary"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    app:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.android.shopr.views.ShoprTextView
+            android:id="@+id/tv_page_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
+            android:text="QUICK CHECKOUT"
+            android:textAllCaps="true"
+            android:textColor="@color/colorWhite"
+            android:textSize="13sp"
+            app:fontFile="Roboto-Light.ttf" />
+
+        <com.android.shopr.views.ShoprTextView
+            android:id="@+id/tv_location_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_page_type"
+            android:layout_marginTop="4dp"
+            android:text="Ambience Mall, Gurgaon"
+            android:textAllCaps="false"
+            android:textColor="@color/colorWhite"
+            android:textSize="17sp"
+            app:fontFile="Roboto-Regular.ttf" />
+
+        <!--<com.android.shopr.views.ShoprEditText-->
+            <!--android:id="@+id/et_search_field"-->
+            <!--android:drawableLeft="@drawable/ic_search"-->
+            <!--android:drawableTint="@color/colorLightWhite"-->
+            <!--android:drawablePadding="10dp"-->
+            <!--android:text="ZZARA"-->
+            <!--android:textSize="18sp"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:visibility="gone"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent" />-->
+
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_cancel_search"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_marginRight="5dp"-->
+            <!--android:visibility="gone"-->
+            <!--app:srcCompat="@drawable/ic_cross"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent" />-->
+
+
+    </RelativeLayout>
 
 </android.support.v7.widget.Toolbar>
