--- a/app/src/main/res/layout/tab_layout.xml
+++ b/app/src/main/res/layout/tab_layout.xml
@@ -7,6 +7,5 @@
     app:tabTextColor="@color/colorWhite"
     app:tabSelectedTextColor="@color/colorPrimaryDark"
     app:tabIndicatorColor="@color/colorPrimaryDark"
-    app:tabGravity="fill"
-    app:tabMode="fixed">
+    app:tabGravity="fill">
 </android.support.design.widget.TabLayout>
