--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorAppBg">#F5FBEF</color>
     <color name="colorDarkGrey">#26272C</color>
     <color name="colorGray">#696969</color>
+    <color name="colorLightWhite">#D5D8DC</color>
 </resources>
