--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -37,7 +37,7 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:scaleType="center"
-            android:src="@drawable/ic_barcode"
+            app:srcCompat="@drawable/ic_barcode"
             android:layout_above="@+id/bottom_navigation"
             android:layout_alignParentRight="true"
             android:layout_marginRight="24dp"
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@android:color/white"
+        android:background="@color/colorDarkGrey"
         app:headerLayout="@layout/nav_header" />
 </android.support.v4.widget.DrawerLayout>
 
