--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -69,6 +69,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/colorDarkGrey"
+        app:itemIconTint="@color/colorWhite"
+        android:theme="@style/BottomNavTheme"
+        app:menu="@menu/navigation_drawer_menu"
         app:headerLayout="@layout/nav_header" />
 </android.support.v4.widget.DrawerLayout>
 
