--- a/app/src/main/res/layout/app_bar_store_detail.xml
+++ b/app/src/main/res/layout/app_bar_store_detail.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="?android:attr/actionBarSize"
     android:background="@color/colorPrimary"
+    app:contentInsetLeft="10dp"
+    app:contentInsetStart="10dp"
+    app:contentInsetRight="0dp"
+    app:contentInsetEnd="0dp"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     app:theme="@style/ThemeOverlay.AppCompat.Dark">
 
