--- a/app/src/main/res/layout/product_image_and_description.xml
+++ b/app/src/main/res/layout/product_image_and_description.xml
@@ -49,6 +49,7 @@
             android:layout_marginLeft="4dp"
             android:textSize="12sp"
             android:text="Rs. 1799"
+            android:background="@drawable/bg_strikethrough"
             app:fontFile="Roboto-BoldItalic.ttf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -71,7 +72,7 @@
 
         <ImageView
             android:id="@+id/iv_watch_product"
-            app:srcCompat="@drawable/ic_watch"
+            app:srcCompat="@drawable/ic_watch_black"
             android:layout_below="@+id/iv_image"
             android:layout_marginTop="15dp"
             android:layout_marginRight="5dp"
